BulkUpdates-draft5-dec3
updates to bulkley online wcrp

--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -37,7 +37,7 @@ The following Watershed Connectivity Restoration Plan (WCRP) represents the culm
 
 WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative GIS analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonid species and uses consensus-based planning exercises and spatial model implementation to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives moving forward.
 
-The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assessed their current connectivity status in the watershed, defined concrete goals for gains in connectivity, and developed a priority list of structures for rehabilitation to achieve those goals. During the 2021 field season, 28 structure assessments and 21 habitat confirmations were completed. Seventeen barriers were added to the intermediate barrier list based on 2021 field assessments, and an additional 17 structures were removed from the list, due to being passable, not existing, or having low quality habitat. The preliminary barriers list was further divided this year into an "intermediate barriers" list, which includes barriers that require further assessment, and a "priority barriers" list, which includes barriers that are actively being pursued for design and rehabilitation. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
+The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve freshwater connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assessed their current connectivity status in the watershed, defined concrete goals for gains in connectivity, and developed a priority list of structures for rehabilitation to achieve those goals. During the 2021 field season, 28 structure assessments and 21 habitat confirmations were completed. Seventeen barriers were added to the intermediate barrier list based on 2021 field assessments, and an additional 17 structures were removed from the list, due to being passable, not existing, or having low quality habitat. The preliminary barriers list was further divided this year into an "intermediate barriers" list, which includes barriers that require further assessment, and a "priority barriers for rehabilitation" list, which includes barriers that are actively being pursued for design and rehabilitation. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
 
 ## Vision Statement {-}
 
@@ -50,7 +50,7 @@ Connectivity is a critical component of freshwater ecosystems that encompasses a
 ![The primary geographic scope — the Bulkley River watershed, excluding the Morice River drainage.](images/geo-scope-bulk.png){#fig-geoscope}
 
 
-The primary geographic scope of this WCRP is the Bulkley River watershed, located in the mid-eastern portion of the Skeena River drainage basin in northwestern British Columbia (@fig-geoscope). The scope constitutes the Bulkley River "watershed group" as defined by the [British Columbia Freshwater Atlas](https://catalogue.data.gov.bc.ca/dataset/freshwater-atlas-watershed-groups) (FWA). A consistent spatial framework was necessary to undertake a watershed-selection process at the provincial scale to identify target watersheds to improve connectivity for salmonids. The Bulkley River watershed was identified by the BC Fish Passage Restoration Initiative as one of four target watersheds for WCRP development @Mazany-Wright2021-do. The Bulkley River watershed has a drainage area of 776,200 ha, spanning from Bulkley Lake in the southeast to the confluence with the Skeena River in the northwest. The watershed is generally divided into the "lower" Bulkley River and the "upper" Bulkley River by the confluence with the Morice River near the town of Houston. Culturally and economically important populations of Chinook Salmon (Oncorhynchus tshawytscha), Coho Salmon (Oncorhynchus kisutch), Sockeye Salmon (Oncorhynchus nerka), and Steelhead (Oncorhynchus mykiss) are all found in the watershed, which historically supported Indigenous sustenance and trading economies (@tbl-spn; @Irvine2021). 
+The primary geographic scope of this WCRP is the Bulkley River watershed, located in the mid-eastern portion of the Skeena River drainage basin in northwestern British Columbia (@fig-geoscope). The scope constitutes the Bulkley River "watershed group" as defined by the [British Columbia Freshwater Atlas](https://catalogue.data.gov.bc.ca/dataset/freshwater-atlas-watershed-groups) (FWA). A consistent spatial framework was necessary to undertake a watershed-selection process at the provincial scale to identify target watersheds to improve freshwater connectivity for salmonids. The Bulkley River watershed was identified by the BC Fish Passage Restoration Initiative as one of four target watersheds for WCRP development @Mazany-Wright2021-do. The Bulkley River watershed has a drainage area of 776,200 ha, spanning from Bulkley Lake in the southeast to the confluence with the Skeena River in the northwest. The watershed is generally divided into the "lower" Bulkley River and the "upper" Bulkley River by the confluence with the Morice River near the town of Houston. Culturally and economically important populations of Chinook Salmon (Oncorhynchus tshawytscha), Coho Salmon (Oncorhynchus kisutch), Sockeye Salmon (Oncorhynchus nerka), and Steelhead (Oncorhynchus mykiss) are all found in the watershed, which historically supported Indigenous sustenance and trading economies (@tbl-spn; @Irvine2021). 
 
 ```{python echo=FALSE}
 #| label: tbl-spn
@@ -99,14 +99,14 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible waterbodies”, which are defined as streams that focal species should be able to access in the absence of anthropogenic structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "exclusionary points", which are waterfalls greater than 5 m in height and gradient barriers based on species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the scope for further consideration. The "constrained geographic scope" formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz. 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as streams that focal species should be able to access in the absence of anthropogenic structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "exclusionary points", which are waterfalls greater than 5 m in height and gradient barriers based on species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the scope for further consideration. The "constrained geographic scope" formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz. 
 
 
 ![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identifies the waterbodies within which habitat modelling and barrier mapping and prioritization was undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
 
 ## Focal Species {-}
 
-Focal species represent the ecologically and culturally important species for which habitat connectivity is being conserved and/or restored in the watershed. In the Bulkley River watershed, the planning team selected Anadromous Salmonids as the focal guild, which comprises Chinook Salmon, Coho Salmon, Sockeye Salmon, and Steelhead. Anadromous salmonids also include Pink Salmon (Oncorhynchus gorbuscha) and Chum Salmon (Oncorhynchus keta) as beneficiary species (i.e., species that are not actively targeted through the planning process but will also benefit from connectivity improvements for target anadromous species in the watershed). The selection of these focal species was driven primarily by the focal species of the primary fund supporting this planning work. The planning team also identified other culturally and ecologically important species within the watershed to consider for inclusion in future iterations of the WCRP, including Pacific Lamprey (Entosphenus tridentatus) and Bull Trout (Salvelinus confluentus).
+Focal species represent the ecologically and culturally important species for which habitat connectivity is being conserved and/or restored in the watershed. In the Bulkley River watershed, the planning team selected Anadromous Salmonids as the focal guild, which comprises Chinook Salmon, Coho Salmon, Sockeye Salmon, and Steelhead. Anadromous salmonids also include Pink Salmon (Oncorhynchus gorbuscha) and Chum Salmon (Oncorhynchus keta) as beneficiary species (i.e., species that are not actively targeted through the planning process but will also benefit from connectivity improvements for focal anadromous species in the watershed). The selection of these focal species was driven primarily by the focal species of the primary fund supporting this planning work. The planning team also identified other culturally and ecologically important species within the watershed to consider for inclusion in future iterations of the WCRP, including Pacific Lamprey (Entosphenus tridentatus) and Bull Trout (Salvelinus confluentus).
 
 ### Anadromous Salmonids {-}
 
