--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -47,7 +47,7 @@ df
 
 ```
 
-**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022. 
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Structure Prioritization Model output, which is current as of October 2022. 
 
 
 ## Goals {-}
