--- a/content/connectivity-status.ipynb
+++ b/content/connectivity-status.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "id": "bee0a833",
+      "id": "bc404e07",
       "execution_count": null,
       "outputs": []
     },
@@ -29,13 +29,13 @@
         "\n",
         "The current connectivity status was estimated using three spatial models:\n",
         "\n",
-        "1.\tAccessibility model: Naturally accessible waterbodies are those that are considered likely accessible to focal species if no human-made barriers existed on the landscape. These were spatially delineated for each focal species using natural barriers (i.e., waterfalls, gradient barriers, or subsurface flows) that would naturally limit upstream movement (Table XX).\n",
+        "1.\tAccessibility model: Naturally accessible waterbodies are those that are considered likely accessible to focal species if no human-made barriers existed on the landscape. These were spatially delineated for each focal species using natural barriers (i.e., waterfalls, gradient barriers, or subsurface flows) that would naturally limit upstream movement (@).\n",
         "\n",
         "2.\tHabitat model: A subset of the naturally accessible waterbody layer was defined as key habitat, i.e., habitat likely to support spawning or rearing, rather than simply movement corridors. The habitat model identifies areas within waterbodies that have a higher potential to support key habitat based on stream channel gradient and discharge. The habitat model criteria can be found in (Table XX).\n",
         "\n",
         "3.\tConnectivity model: A layer of known or modelled structures was overlaid  on the key habitat results. Structures  with unknown passability were treated as a full barrier until confirmed passable by either local knowledge, desktop review, or field assessment. Watershed connectivity was estimated by calculating the amount of key habitat that is connected to the ocean (i.e., not fragmented by human-made barriers). Key habitat with no structures or only passable structures downstream was considered connected. Key habitat upstream of full, partial, or potential barriers was considered disconnected. All connected habitat was summed and divided by the total amount of key habitat in the watershed to arrive at the KEA indicators. Detailed methods for the connectivity model can be found in [Appendix C](data-methods.qmd)\n"
       ],
-      "id": "7f3d48be"
+      "id": "f0568f13"
     },
     {
       "cell_type": "code",
@@ -59,7 +59,7 @@
       "source": [
         "**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022.\n"
       ],
-      "id": "ddcfabdf"
+      "id": "2197108e"
     },
     {
       "cell_type": "code",
@@ -71,7 +71,7 @@
         "df = conn_table.make_assess_table(\"Andromous Salmon\", \"Available Rearing Habitat\", \"% of total rearing habitat\", 50, 75, 90, api.connect_rear)\n",
         "df\n"
       ],
-      "id": "919ad260",
+      "id": "627ac763",
       "execution_count": null,
       "outputs": []
     },
@@ -84,7 +84,7 @@
         "\n",
         "## Goals {-}\n"
       ],
-      "id": "c5888c3e"
+      "id": "71df600f"
     },
     {
       "cell_type": "code",
@@ -122,9 +122,9 @@
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "display_name": "Python 3",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "name": "python3"
     }
   },
   "nbformat": 4,
