--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -37,7 +37,7 @@ The following Watershed Connectivity Restoration Plan (WCRP) represents the culm
 
 WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative GIS analyses to gain a shared understanding of where restoration efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and restoration work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonid species and uses consensus-based planning exercises and spatial model implementation to develop watershed-scale status assessments, goal setting, and prioritization for multiple structure types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives moving forward.
 
-The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve freshwater connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assessed their current connectivity status in the watershed, defined concrete goals for gains in connectivity, and developed a priority list of structures for rehabilitation to achieve those goals. During the 2021 field season, 28 structure assessments and 21 habitat confirmations were completed. Seventeen barriers were added to the intermediate barrier list based on 2021 field assessments, and an additional 17 structures were removed from the list, due to being passable, not existing, or having low quality habitat. The preliminary barriers list was further divided this year into an "intermediate barriers" list, which includes barriers that require further assessment, and a "priority barriers for rehabilitation" list, which includes barriers that are actively being pursued for design and rehabilitation. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
+The planning team compiled existing structure location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve freshwater connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where structure prioritization will be conducted, and subsequent rehabilitation efforts will take place. Additionally, the team selected focal fish species, assess the current key habitat connectivity status of the watershed, defined concrete goals for gains in connectivity, and undertook an iterative structure ranking process to identify a list of priority barriers for rehabilitation to achieve those goals. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier rehabilitation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
 
 ## Vision Statement {-}
 
@@ -45,7 +45,7 @@ Healthy, well-connected stream network within the Bulkley River watershed suppor
 
 ## Project Scope {-}
 
-Connectivity is a critical component of freshwater ecosystems that encompasses a variety of factors related to ecosystem structure and function, such as the ability of aquatic organisms to disperse and/or migrate, the transportation of energy and matter (e.g., nutrient cycling and sediment flows), and temperature regulation  (@Seliger2018-be.). Though each of these factors are important when considering the health of a watershed, for the purposes of this WCRP the term "freshwater connectivity" is defined as the degree to which aquatic organisms can disperse and/or migrate freely through freshwater systems. Within this context, freshwater connectivity is primarily constrained by physical structures including anthropogenic infrastructure such as dams, weirs, and stream crossings, and natural barriers such as waterfalls and debris flows. This plan is intended to focus on the direct restoration and prevention of localized, physical structures instead of the broad land-use patterns that are causing chronic connectivity issues in the watershed. The planning team decided that the primary focus of this WCRP is addressing barriers to longitudinal connectivity (i.e., along the upstream-downstream plane) due to the magnitude of the threat posed by linear development (i.e., road and rail lines) in the watershed.
+Connectivity is a critical component of freshwater ecosystems that encompasses a variety of factors related to ecosystem structure and function, such as the ability of aquatic species to disperse and/or migrate, the transportation of energy and matter (e.g., nutrient cycling and sediment flows), and temperature regulation  (@Seliger2018-be.). Though each of these factors are important when considering the health of a watershed, for the purposes of this WCRP the term "freshwater connectivity" is defined as the degree to which aquatic species can disperse and/or migrate freely through freshwater systems. Within this context, freshwater connectivity is primarily constrained by physical structures including human-made infrastructure such as dams, weirs, and stream crossings, and natural barriers such as waterfalls and debris flows. This plan is intended to focus on the direct restoration and prevention of localized, physical structures instead of the broad land-use patterns that are causing chronic connectivity issues in the watershed. The planning team decided that the primary focus of this WCRP is addressing barriers to longitudinal connectivity (i.e., along the upstream-downstream plane) due to the magnitude of the threat posed by linear development (i.e., road and rail lines) in the watershed.
 
 ![The primary geographic scope — the Bulkley River watershed, excluding the Morice River drainage.](images/geo-scope-bulk.png){#fig-geoscope}
 
@@ -99,22 +99,22 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as streams that focal species should be able to access in the absence of anthropogenic structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "exclusionary points", which are waterfalls greater than 5 m in height and gradient barriers based on species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the scope for further consideration. The "constrained geographic scope" formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz. 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as streams that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "exclusionary points", which are waterfalls greater than 5 m in height and gradient barriers based on species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the scope for further consideration. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz. 
 
 
-![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identifies the waterbodies within which habitat modelling and barrier mapping and prioritization was undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
+![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identifies the waterbodies within which habitat modelling and structure mapping and prioritization was undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
 
 ## Focal Species {-}
 
-Focal species represent the ecologically and culturally important species for which habitat connectivity is being conserved and/or restored in the watershed. In the Bulkley River watershed, the planning team selected Anadromous Salmonids as the focal guild, which comprises Chinook Salmon, Coho Salmon, Sockeye Salmon, and Steelhead. Anadromous salmonids also include Pink Salmon (Oncorhynchus gorbuscha) and Chum Salmon (Oncorhynchus keta) as beneficiary species (i.e., species that are not actively targeted through the planning process but will also benefit from connectivity improvements for focal anadromous species in the watershed). The selection of these focal species was driven primarily by the focal species of the primary fund supporting this planning work. The planning team also identified other culturally and ecologically important species within the watershed to consider for inclusion in future iterations of the WCRP, including Pacific Lamprey (Entosphenus tridentatus) and Bull Trout (Salvelinus confluentus).
+Focal species represent the ecologically and culturally important species for which habitat connectivity is being conserved and/or restored in the watershed. In the Bulkley River watershed, the planning team selected Anadromous Salmonids as the focal guild, which comprises Chinook Salmon, Coho Salmon, Sockeye Salmon, and Steelhead. Anadromous salmonids also include Pink Salmon (*Oncorhynchus gorbuscha*) and Chum Salmon (*Oncorhynchus keta*) as beneficiary species (i.e., species that are not actively targeted through the planning process but will also benefit from connectivity improvements for focal anadromous species in the watershed). The selection of these focal species was driven primarily by the focal species of the primary fund supporting this planning work. The planning team also identified other culturally and ecologically important species within the watershed to consider for inclusion in future iterations of the WCRP, including Pacific Lamprey (*Entosphenus tridentatus*) and Bull Trout (*Salvelinus confluentus*).
 
 ### Anadromous Salmonids {-}
 
-Anadromous salmonids are cultural and ecological keystone species that contribute to productive ecosystems by contributing marine-derived nutrients to the watershed and forming an important food source for grizzly bears and other species @Schindler2003. Salmon have enduring food, social, and ceremonial value for the Gitxsan and Wet’suwet’en peoples and contribute significant economic value for recreational and commercial fisheries. Salmon have sustained the culture and economies of Indigenous peoples in the watershed since time immemorial – providing the primary food source for communities, supporting wide-ranging trade systems, and helping pass knowledge and ceremony to future generations through fishing and fish processing (@SSAF2021, @OfficeWetsuweten2013, @Rescan2012).
+Anadromous salmonids are cultural and ecological keystone species that contribute to productive ecosystems by contributing marine-derived nutrients to the watershed and forming an important food source for grizzly bears and other species (@Schindler2003). Salmon have enduring food, social, and ceremonial value for the Gitxsan and Wet’suwet’en peoples and contribute significant economic value for recreational and commercial fisheries. Salmon have sustained the culture and economies of Indigenous peoples in the watershed since time immemorial – providing the primary food source for communities, supporting wide-ranging trade systems, and helping pass knowledge and ceremony to future generations through fishing and fish processing (@SSAF2021, @OfficeWetsuweten2013, @Rescan2012).
 
 Anadromous salmonid populations in the Bulkley River watershed have declined significantly in recent decades, leading both the Gitxsan and Wet’suwet’en nations to declare harvest moratoriums or fishing bans in their territories (@OfficeWetsuweten2013, @Gitxsan2019). The stewardship of these resources in their territories are imbued in the spirit and culture of these nations through a symbiotic relationship with these fish species – threats to the fish are threats to the well-being of the Wet’suwet’en and Gitxsan peoples (@SSAF2021). The stewardship of their waters continues through the work of the [Gitksan Watershed Authorities](https://gitksanwatershed.com/) and the [Wet’suwet’en Fisheries Program](http://www.wetsuweten.com/departments/fisheries-and-wildlife/), as well as collaborative initiatives like the Skeena Environment Stewardship Initiative. 
 
-For the purposes of this WCRP, anadromous salmonid populations are defined using Fisheries and Oceans Canada's Conservation Units. A Conservation Unit (CU) is a group of wild Pacific salmon sufficiently isolated from other groups that, if extirpated, is very unlikely to recolonize naturally within an acceptable timeframe, such as a human lifetime or a specified number of salmon generations. Conservation Units are not defined for Steelhead, as such there is no assessment information to provide for the Bulkley River watershed population. See Appendix A for maps of modelled anadromous salmonid spawning and rearing habitat in the Bulkley River watershed.
+For the purposes of this WCRP, anadromous salmonid populations are defined using Fisheries and Oceans Canada's Conservation Units. A Conservation Unit (CU) is a group of wild Pacific salmon sufficiently isolated from other groups that, if extirpated, is very unlikely to recolonize naturally within an acceptable timeframe, such as a human lifetime or a specified number of salmon generations. Conservation Units are not defined for Steelhead, as such there is no assessment information to provide for the Bulkley River watershed population.
 
 ### Chinook Salmon | Ya’aa | Ggïs| Oncorhynchus tshawytscha  {-}
 ```{python echo=FALSE}
@@ -341,9 +341,9 @@ data.set_table_styles(
 
 Road-stream crossings are the most abundant structure type in the watershed, with `r sum_road` assessed and modelled crossings located on stream segments with modelled habitat. Demographic road crossings (highways, municipal, and paved roads) block `r demo_km` of habitat (`r demo_pct`% of the total blocked habitat), with `r demo_sev`% of assessed crossings having been identified as barriers to fish passage. Resource roads block `r resource_km` km of habitat (`r resource_pct`%), with `r resource_sev`% of assessed crossings have been identified as barriers. Significant land use and linear development throughout the valley bottom has disconnected the Bulkley River from important habitat in many tributaries, including Highway 16 which represents one of the main drivers of fragmentation in the watershed (see @tbl-table16). The collective experience and input from the planning team resulted in a Medium irreversibility rating due to the technical complexity and resources required to rehabilitate road-stream crossings, though it was noted that this differs considerably between resource roads and highway crossings.
 
-### Rail-stream crossings{-}
+### Rail-stream *Crossings*{-}
 
-There are relatively few rail-stream crossings in the watershed (`r sum_rail` crossings on "potentially accessible" streams), but those that exist block significant amounts of habitat (`r rail_km` km or `r rail_pct`% of the total habitat blocked), with more than half of assessed crossings (`r rail_sev`%) acting as barriers to anadromous salmonids. All rail-stream crossings in the watershed are associated with the Canadian National (CN) railway running along the Bulkley River. With significant financial costs, technical challenges, and stakeholder engagement required with CN to rehabilitate these barriers, the planning team decided on an overall pressure rating of High for this structure type.
+There are relatively few rail-stream crossings in the watershed (`r sum_rail` crossings on "naturally accessible" waterbodies), but those that exist block significant amounts of habitat (`r rail_km` km or `r rail_pct`% of the total habitat blocked), with more than half of assessed crossings (`r rail_sev`%) acting as barriers to anadromous salmonids. All rail-stream crossings in the watershed are associated with the Canadian National (CN) railway running along the Bulkley River. With significant financial costs, technical challenges, and stakeholder engagement required with CN to rehabilitate these barriers, the planning team decided on an overall pressure rating of High for this structure type.
 
 ### Lateral Barriers{-}
 
