--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -17,7 +17,7 @@ The planning team identified two Key Ecological Attributes (KEAs) to assess the 
 
 The current connectivity status was estimated using three spatial models:
 
-1.	Accessibility model: Naturally accessible waterbodies are those that are considered likely accessible to focal species if no human-made barriers existed on the landscape. These were spatially delineated for each focal species using natural barriers (i.e., waterfalls, gradient barriers, or subsurface flows) that would naturally limit upstream movement (@).
+1.	Accessibility model: Naturally accessible waterbodies are those that are considered likely accessible to focal species if no human-made barriers existed on the landscape. These were spatially delineated for each focal species using natural barriers (i.e., waterfalls, gradient barriers, or subsurface flows) that would naturally limit upstream movement (@tbl-param-bulkley).
 
 2.	Habitat model: A subset of the naturally accessible waterbody layer was defined as key habitat, i.e., habitat likely to support spawning or rearing, rather than simply movement corridors. The habitat model identifies areas within waterbodies that have a higher potential to support key habitat based on stream channel gradient and discharge. The habitat model criteria can be found in (Table XX).
 
@@ -35,7 +35,7 @@ df
 
 ```
 
-**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of October 2022.
+**Comments:** Indicator rating definitions are based on the consensus decisions of the planning team. The current status is based on the CWF Barrier Prioritization Model output, which is current as of December 2024.
 
 ```{python echo=FALSE}
 #| warning: false
@@ -66,8 +66,8 @@ import pandas as pd
 import numpy as np
 
 df = pd.DataFrame({"Goal #": [1,2],
-                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from "+ str(api.watershed_connectivity("SPAWNING")[0]) +"% to 95% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_spawn))+" km of spawning habitat).",
-                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from "+str(api.watershed_connectivity("REARING")[0])+"% to 80% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_rear))+" km of rearing habitat). "]
+                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat connected for anadromous salmonids will increase from "+ str(api.watershed_connectivity("SPAWNING")[0]) +"% to 95% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_spawn))+" km of spawning habitat).",
+                            "By 2031, the percent (%) of total linear rearing habitat connected for anadromous salmonids will increase from "+str(api.watershed_connectivity("REARING")[0])+"% to 80% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_rear))+" km of rearing habitat). "]
                     })
 
 data = df.style.hide().set_properties(**{'text-align': 'left'})
